Worked on mobile, fixing css errors

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -11,8 +11,8 @@ body {
 }
 
 img {
-  max-width: 100%;
-  /*height: auto;*/
+  /*max-width: 100%;*/
+  height: auto;
 }
 
 * {
