--- a/app/assets/styles/modules/_backbone.css
+++ b/app/assets/styles/modules/_backbone.css
@@ -1,11 +1,13 @@
 .backbone {
   width: 100%;
+  height: 100%;
   margin: auto;
-  overflow: hidden;
   text-align: center;
   z-index:-15;
+  /*overflow: hidden;*/
 
   @mixin atSmall {
+    overflow: hidden;
     width: 62.5rem;
   }
 
@@ -20,13 +22,21 @@
       padding-top: 1.1rem;
       padding-bottom: 1.1rem;
     }
+
+    & img {
+      max-width: 100%;
+    }
   }
 
   &__cloud {
     position:relative;
-    left:-15rem;
+    /*left:-15rem;*/
     /*height: 100%;*/
+    /*width: 100%;*/
     /*background-color: red;*/
+    text-align: left;
+    overflow: hidden;
+    padding-bottom:9rem;
 
     @mixin atSmall {
       position:relative;
@@ -41,19 +51,47 @@
     }
 
     & > img {
-      max-width:none;
-      position:absolute;
-      top:-6rem;
-      z-index:-99;
-      margin-left:-15rem;
-
-      @mixin atSmall {
-        position:static;
-        margin-left:0;
-
-
-      }
     }
+  }
+
+  &__cloud--mobile-top {
+    max-width:none;
+    position:absolute;
+    /*width:100%;*/
+    top:0rem;
+    left:-15rem;
+    z-index:-99;
+
+    /*margin-left:-15rem;*/
+    clip: rect(0rem,80rem,11rem,0rem);
+
+
+    @mixin atSmall {
+      position:static;
+      margin-left:0;
+      clip: auto;
+    }
+  }
+
+  &__cloud--mobile-bottom {
+    max-width:none;
+    position:absolute;
+    bottom:3rem;
+    z-index:-99;
+    margin-left:-15rem;
+    clip: rect(20rem,80rem,100rem,0rem);
+    /*padding-bottom: 4rem;*/
+
+    /*display:none;*/
+
+
+    @mixin atSmall {
+      display:none;
+      position:static;
+      margin-left:0;
+      clip: auto;
+    }
+
   }
 
 
