--- a/app/assets/styles/modules/_modal.css
+++ b/app/assets/styles/modules/_modal.css
@@ -1,8 +1,7 @@
 .modal{
-  position:absolute;
+  position:fixed;
   width:100%;
   height:100%;
-  background-color: black;
   background-color: rgba(0, 0, 0, 0.5);
   z-index:10;
   display: none;
@@ -18,17 +17,26 @@
   }
 
   &__box{
-    position: relative;
+    position: fixed;
+    max-height: 90%;
     margin: auto;
     top: 50%;
     transform:translateY(-50%);
-    width: 80rem;
-    /*min-height: 75%;*/
+    margin-right: auto;
+    margin-left: auto;
+    right: 0;
+    left: 0;
+    max-width: 80rem;
+    width: 100%;
     background-color:#eee;
     padding: 1.4rem 3rem;
     border-radius:0.31%;
     overflow: auto;
     float:bottom;
+
+    @mixin atSmall {
+
+    }
   }
 
   &__title {
